--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "cashback",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "install-lit-html": "node installLitHtml.js"
-
+    "install-lit-html": "node installLitHtml.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "lit-html": "^3.2.1"
-  } 
-  
-   
-  
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vash117/new-cashback.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Vash117/new-cashback/issues"
+  },
+  "homepage": "https://github.com/Vash117/new-cashback#readme",
+  "description": ""
 }
